<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_learned_songs">

    <fragment
        android:id="@+id/navigation_learned_songs"
        android:name="ru.viafanasyev.guitarsongbook.ui.learnedsongs.LearnedSongsFragment"
        android:label="@string/title_learned_songs"
        tools:layout="@layout/fragment_learned_songs" />

    <fragment
        android:id="@+id/navigation_not_learned_songs"
        android:name="ru.viafanasyev.guitarsongbook.ui.notlearnedsongs.NotLearnedSongsFragment"
        android:label="@string/title_not_learned_songs"
        tools:layout="@layout/fragment_not_learned_songs" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ru.viafanasyev.guitarsongbook.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>