<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:fillViewport="false"
    tools:context=".ui.parsing.SongListParsingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/songListInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:hintEnabled="false"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/songListEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minLines="15"
                android:lines="25"
                android:maxLines="30"
                android:scrollbars="vertical"
                android:gravity="top|start"
                android:hint="@string/hint_song_list"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/asLearnedSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"

            android:text="@string/button_add_as_learned"
            android:checked="false"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/songListInputLayout" />

        <!-- TODO: Non-selectable background -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/separatorsListInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/hint_song_separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/asLearnedSwitch"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/separatorsListDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/hint_song_separator"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- TODO: Non-selectable background -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/songFormatsListInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/hint_song_format"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separatorsListInputLayout"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/songFormatsListDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/hint_song_format"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/songFormatsListInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>