<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:fillViewport="false"
    tools:context=".ui.export.SongListExportActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/exportedLearnedSongListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_learned_songs"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/exportedLearnedSongList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textIsSelectable="true"
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exportedLearnedSongListTitle" />

        <TextView
            android:id="@+id/exportedNotLearnedSongListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_not_learned_songs"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exportedLearnedSongList" />

        <TextView
            android:id="@+id/exportedNotLearnedSongList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textIsSelectable="true"
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exportedNotLearnedSongListTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>